<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_register">

    <!-- Comment this ImageView after you have handled the image background with Java at the Activity-->
      <!--  <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/Background"
            android:scaleType="centerCrop"
            android:id="@+id/background"
            /> -->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/Logo"
        android:src="@drawable/ic_logo"
        android:scaleType="fitCenter"
        android:layout_marginBottom="30dp"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Logo"
        android:id="@+id/scrollView"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/white_rectangle"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"

            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Get Started"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Just a few details to get you started"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_marginBottom="30dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"

                />
            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/hint_name"
                android:background="@drawable/rounded_white"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:drawableLeft="@drawable/ic_user_icon"
                android:textSize="14sp"
                android:drawablePadding="5dp"
                android:paddingStart="10dp"
                android:id="@+id/name"
                android:layout_marginBottom="10dp"
                android:textColor="@color/text"
                android:textColorHint="@color/text"
                />

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/hint_email"
                android:background="@drawable/rounded_white"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:drawableLeft="@drawable/ic_email"
                android:textSize="14sp"
                android:drawablePadding="5dp"
                android:paddingStart="10dp"
                android:id="@+id/email"
                android:layout_marginBottom="10dp"
                android:textColor="@color/text"
                android:textColorHint="@color/text"
                />

            <AutoCompleteTextView
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/rounded_white"
                android:drawableLeft="@drawable/ic_pass_icon"
                android:drawablePadding="5dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:textColor="@color/text"
                android:textColorHint="@color/text"
                android:textSize="14sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:textColor="@color/white"
                android:text="@string/btn_register"
                android:textStyle="normal"
                android:background="@drawable/button_register"
                android:layout_gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="36dp"
                android:id="@+id/btnRegister"
                />

        </LinearLayout>

    </ScrollView>
   <!-- <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="All information will be added to our database. We guarantee that your personal information will not be passed on to third parties."
        android:textColor="@color/white"
        android:layout_below="@+id/scrollView"
        android:layout_marginTop="16dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:id="@+id/guarantee"
        />-->

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_link_to_login"
        android:textColor="@color/white"
        android:layout_below="@+id/scrollView"
        android:layout_marginTop="16dp"
        android:layout_marginStart="30dp"
        android:background="@null"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:id="@+id/btnLinkToLoginScreen"
        />

</RelativeLayout>