<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_register"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/Logo"
        android:src="@drawable/ic_logo"
        android:scaleType="fitCenter"
        android:layout_marginBottom="30dp"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Logo"
        android:id="@+id/scrollView"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/white_rectangle"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"

            >

            <TextView
                android:id="@+id/vText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="10dp"/>

            <TextView
                android:id="@+id/vText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="10dp"/>
            <TextView
                android:id="@+id/vText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="10dp"/>


            <AutoCompleteTextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/rounded_white"
                android:drawableLeft="@drawable/ic_user_icon"
                android:drawablePadding="5dp"
                android:hint="@string/hint_name"
                android:paddingStart="10dp"
                android:textColor="@color/text"
                android:textColorHint="@color/text"
                android:textSize="14sp" />

            <AutoCompleteTextView
                android:id="@+id/secname"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/rounded_white"
                android:drawableLeft="@drawable/ic_user_icon"
                android:drawablePadding="5dp"
                android:hint="@string/hint_secname"
                android:paddingStart="10dp"
                android:textColor="@color/text"
                android:textColorHint="@color/text"
                android:textSize="14sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:textColor="@color/white"
                android:text="@string/btn_register"
                android:textStyle="normal"
                android:background="@drawable/button_register"
                android:layout_gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="36dp"
                android:id="@+id/btnRegister"
                />

        </LinearLayout>

    </ScrollView>
</LinearLayout>


